--- a/src/styles/cvEditor.css
+++ b/src/styles/cvEditor.css
@@ -5,7 +5,7 @@
   overflow-y: hidden;
   z-index: 5;
   background-color: #414141;
-  box-shadow: 2px 0px 10px 0px rgb(0,0,0,0.5);
+  box-shadow: 2px 0px 10px 0px rgb(0, 0, 0, 0.5);
 }
 
 .progress-bar {
@@ -66,7 +66,7 @@
 
 .editor-nav-buttons button {
   border-radius: 4px;
-  box-shadow: 2px 2px 10px 0px rgb(0,0,0,0.5);
+  box-shadow: 2px 2px 10px 0px rgb(0, 0, 0, 0.5);
   padding: 12px 12px;
   transition:
     color 150ms ease-in,
